fixed some typos and added some clarifications in the methodology section

--- a/Barbu Paul - Gheorghe.tex
+++ b/Barbu Paul - Gheorghe.tex
@@ -487,7 +487,7 @@ An example of cyclic data can be seen in figure \ref{dlynx}. Which shows the ann
 
 The cycles in the data are aperiodic and are caused when the population of lynxes increases and is too large to be able to feed, at that point they stop breeding and the population starts to decrease, after the regeneration of food sources, the population will, again, grow. After this point the cycle starts repeating, but with uncertainty with regards to each phase's length, making the time series cyclic, not seasonal \cite{fpp2stationarity}.
 
-\section{Stationarity and non-stationarity}
+\section{Stationarity and non-stationarity} \label{stationaritysection}
 
 Data stationarity is an assumption that is the basis of many time-series algorithms, including ARIMA. The ARIMA model need to be fed only stationary data in order to yield good results.
 
@@ -1387,11 +1387,11 @@ If still there is any noticeable change, we could account for it by only taking 
 In summary, in order to be able to analyze the data I have looked at pieces of it, each piece being approximately the size of a week, and in order to avoid assumptions about the representativeness of that week, we always model with ARIMA a single week and produce forecasts for several days. This approach also falls in line with the Pareto principle, having approximately a week for training and several days for testing, presented also in listing \ref{actualKcode} via the \texttt{best.traindays} and \texttt{best.testdays}. The exact size for the training days and test days is determined as explained in section \ref{arimaincode}. As we will see in section \ref{methodologysection} this "week by week" forecasting approach is also useful in parallelizing the code. The code is embarrassingly parallel since every data chunk is independent of the previous or the next chunk. I can create an ARIMA model for a week and produce forecasts from it without influencing in any way the model and predictions for the previous or next week, for which all the data is independent. Of course the parallelization was done using the \texttt{foreach}\footnote{\url{https://cran.r-project.org/package=foreach}} \& \texttt{doParallel}\footnote{\url{https://cran.r-project.org/package=doParallel}} R packages.
 
 \section{Methodology} \label{methodologysection}
-This section deals takes all the presented pieces and puts them together. All the steps taken towards finding and fitting a proper ARIMA model will now be explained in logical order along with the decisions taken at every step in order to facilitate forecasting of electrical energy consumption and production.
+This section takes all the presented pieces and puts them together. All the steps taken towards finding and fitting a proper ARIMA model will now be explained in logical order along with the decisions taken at every step in order to facilitate forecasting of electrical energy consumption and production.
 
 First of all, during the modeling and forecasting process no distinction is made between the consumption of energy and the production of it. Both are treated as similar time series. This is possible because both are measured in the same units and are captured at the same intervals (the sampling frequency of the data set is five minutes). Thus the modeling and prediction process for the consumption and production doesn't have to be different, only the conclusions drawn will have to be different since the two processes are driven by different causes.
 
-For reasons explained previously in section \ref{datasetsection} I will not use directly at the original time series in the data set, instead I will try to use the down sampled time series in order to be able to properly interpret the plots, since the high frequency time series yields plots that are way too dense to be interpreted. Also this is done because forecasting the original time series with ARIMA is very time consuming due to the high frequency of the data points and due to the sheer amount of data points available in a single time series (around 43200 points per time series). Hence I will use the down sampled time series, with sampling frequency of one and two hours respectively to be able to interpret the plots. I will use only chunks of one week to find the ARIMA parameters that properly fit the data and then forecast several days ahead, this process is then repeated, week by week, until all the data was fit and forecast. In summary: I will analyze a chunk of data (the down sampled data), approximately the size of a week, try to come up with proper ARIMA parameters for that respective week, then forecast the next several days (the size of the chunk and the size of the forecast horizon will be set to match the Pareto principle). The found parameters for ARIMA will be kept constant (considering that the model is representative for the whole data), but the model will then be re-fit for every next chunk of data from the time series, hence avoiding the assumption that the data doesn't change (or changes ever so slightly that it doesn't matter). This process will be repeated as many times as necessary, also yielding the embarrassingly parallel nature of the code, hence speeding things up a bit.
+For reasons explained previously in section \ref{datasetsection} I will not use directly the original time series in the data set, instead I will try to use the down sampled time series in order to be able to properly interpret the plots, since the high frequency time series yields plots that are way too dense to be interpreted. Also this is done because forecasting the original time series with ARIMA is very time consuming due to the high frequency of the data points and due to the sheer amount of data points available in a single time series (around 43200 points per time series). Hence I will use the down sampled time series, with sampling frequency of one and two hours respectively to be able to interpret the plots. I will use only chunks of one week to find the ARIMA parameters that properly fit the data and then forecast several days ahead, this process is then repeated, week by week, until all the data was fit and forecast. In summary: I will analyze a chunk of data (the down sampled data), approximately the size of a week, try to come up with proper ARIMA parameters for that respective week, then forecast the next several days (the size of the chunk and the size of the forecast horizon will be set to match the Pareto principle). The found parameters for ARIMA will be kept constant (considering that the model is representative for the whole data), but the model will then be re-fit for every next chunk of data from the time series, hence avoiding the assumption that the data doesn't change (or changes ever so slightly that it doesn't matter). This process will be repeated as many times as necessary, also yielding the embarrassingly parallel nature of the code, hence speeding things up a bit.
 
 In what follows I will start walking through the steps necessary to model and forecast with ARIMA by actually giving an example for one of the time series. I will use as example the last week of the series \texttt{Ph3} sampled every two hours.
 
@@ -1432,7 +1432,7 @@ In the sub series plot the original data in split into seasons as well. Similarl
 Each season on the plot is represented as an individual time series. Each observation belonging to the same season in a day is arranged in its respective slot. Since the training data had seven days worth of data, each mini time series consists of seven points, each from a different day, but the same season. The blue line shows the mean of each sub series. This plot shows that the energy consumption increases around lunch hours, hence reaching the conclusion this time series has daily seasonality.
 So for now we might expect a seasonal ARIMA model to best fit the data, this conclusion will be also helpful when generating the dummies for use with the \texttt{SARIMAX} model.
 
-Directly from the time plot of the data one can see that there are no trends or level shifts that might make the data non-stationary. Hence we can quickly conclude that there is no need for transformations (like the general BoxCox transformation) or for differencing, be it seasonal or non-seasonal.
+Directly from the time plot of the data one can see that there are no trends or level shifts that might make the data non-stationary. Hence we can quickly conclude that there is no need for transformations (like the general BoxCox transformation) or for differencing, be it seasonal or non-seasonal. All these concepts were presented in sections: \ref{stationaritysection}, \ref{differencing} and \ref{boxcoxtransformation}.
 
 Next, I shall inspect the autocorrelation and partial autocorrelation of the data in order to establish the \texttt{AR} and \texttt{MA} terms of ARIMA. These will also provide confirmation that the decision not to transform or differentiate the data was accurate. Both the ACF and PACF plots are shown in figure \ref{dlastweek2hrsph3acfpacf}.
 
@@ -1446,7 +1446,7 @@ Next, I shall inspect the autocorrelation and partial autocorrelation of the dat
 From the fact that the ACF plot doesn't slowly decay, but instead quickly drops, I get confirmation for the fact that the data is indeed stationary and it doesn't need differencing or seasonal differencing. So this settles the discussion for the $ d $ and $ D $ parameters of the seasonal ARIMA model. Both will be set to zero, $ d = 0 $ and $ D = 0 $.
 
 From both the autocorrelation plot and the partial autocorrelation plot one can decide whether the model needs \texttt{AR} or \texttt{MA} terms.
-According to what was presented in section \ref{choosingarandmasection} with regards to choosing the $ p $ or $ q $ parameters and to the ACF and PACF plots shown in figure \ref{dlastweek2hrsph3acfpacf} I decide that this data needs one \texttt{AR} term and one \texttt{SAR} term. So we will have $ p = 1 $ and $ P = 1 $. First of all, the ACF shown a sinusoidal form: positive for the first lag, negative around lag 6 and then positive again on lag 12, negative at lag 18 and back over zero around lag 24, a strong indication of an auto-regressive model. The order of the model can be deduced from the PACF plot, which has only one significant lag, then only non-significant ones, hence $ p = 1 $ is a good decision. The \texttt{SAR} order $ P = 1 $ is chosen this way since we have significant spikes at seasonal lags 12 and almost significant spikes at lag 24. Please keep in mind that there are only 12 observation per day, since the data presented here is sampled with a frequency of two hours, so these significant spikes match a full day, a 24 hour period, thus matching our initial observations from the seasonal and seasonal subseries plots in figures \ref{dlastweek2hrsph3seasonal} and \ref{dlastweek2hrsph3subseries} respectively.
+According to what was presented in section \ref{choosingarandmasection} with regards to choosing the $ p $ or $ q $ parameters and to the ACF and PACF plots shown in figure \ref{dlastweek2hrsph3acfpacf} I decide that this data needs one \texttt{AR} term and one \texttt{SAR} term. So we will have $ p = 1 $ and $ P = 1 $. First of all, the ACF shows a sinusoidal form: positive for the first lag, negative around lag 6 and then positive again on lag 12, negative at lag 18 and back over zero around lag 24, a strong indication of an auto-regressive model. The order of the model can be deduced from the PACF plot, which has only one significant lag, then only non-significant ones, hence $ p = 1 $ is a good decision. The \texttt{SAR} order $ P = 1 $ is chosen this way since we have significant spikes at seasonal lags 12 and almost significant spikes at lag 24. Please keep in mind that there are only 12 observation per day, since the data presented here is sampled with a frequency of two hours, so these significant spikes match a full day, a 24 hour period, thus matching our initial observations from the seasonal and seasonal subseries plots in figures \ref{dlastweek2hrsph3seasonal} and \ref{dlastweek2hrsph3subseries} respectively.
 
 With this I have arrived at an initial model that looks like this: $ ARIMA(1, 0, 0)(1, 0, 0)[12] $. That is, a first order non-seasonal and seasonal auto-regressive ARIMA model with no differences and no moving average. The seasonal period is 12, every 12th observation a new day starts within the data.
 
@@ -1622,7 +1622,7 @@ Here we no longer see an almost-significant spike around lag 12 in the autocorre
     \label{accuracyofDummiesmodel}
 \end{table}
 
-The accuracy of the model, shown in table \ref{accuracyofDummiesmodel} also displays smaller errors than for the initial model (see table \ref{accuracyofinitialmodel}), with the exception of the mean absolute error, but the difference is only 5 units, which can be safely ignored.
+The accuracy of the model, shown in table \ref{accuracyofDummiesmodel} displays a smaller mean error than for the initial model (see table \ref{accuracyofinitialmodel}), the other two, the root mean squared error and mean absolute error do not improve, but the differences are small, which can be safely ignored.
 
 Regarding the forecasts, they are also satisfactory, the seasonal nature of the data was projected into the future and the fit of the model for the training data is good as well, taking the shape of the red line, as observed in figure \ref{dlastweek2hrsph3forecastsDummies}.
 
@@ -1634,10 +1634,10 @@ Regarding the forecasts, they are also satisfactory, the seasonal nature of the 
 \end{figure}
 
 Having found a good performing model on a single chunk of data it is time to try and apply this model to the entire time series.
-For the \texttt{Ph3} time series with the sampling frequency of two hours I have, unfortunately, found that this model is not the best, but instead a combination of ARIMA with dummies and Fourier terms is. The way to reach such a complex combination is by starting from an empirical observation, such as we already have here and then algorithmically explore several ones.
+For the \texttt{Ph3} time series with the sampling frequency of two hours I have however found that this model is not the best, but instead a combination of ARIMA with dummies and Fourier terms is. The way to reach such a complex combination is by starting from an empirical observation, such as we already have here and then algorithmically explore several ones. This result, the fact that one separate model did not perform well on the whole data is not surprising, since every explored alternative had some kind of downside, be it the $ Q^* $, or the information left in the residuals or the increasing errors.
 
 Apart from combining dummies with dynamic harmonic regression, we also have to vary the parameters of the individual parts of the model.
-One such part was presented in sections \ref{dynamicharmonicregression} and \ref{arimaincode} and in listing \ref{actualKcode}, namely the choosing of the number of Fourier terms to include in the model. Another part is to try to find the best range for the dummies. Using the above example, starting at the 5th observation up to the 9th might not be the optimal choice, instead we should try a different starting point and ending point in the hope that the accuracy of the model will be better (that is the errors will be generally lower). The third important point of configuration is the number of training and test days, which again is algorithmically computed by varying the number of test and train days to achieve the smallest errors. 
+One such part was presented in sections \ref{dynamicharmonicregression} and \ref{arimaincode} and in listing \ref{actualKcode}, namely the choosing of the number of Fourier terms to include in the model. Another part is to try to find the best range for the dummies. Using the above example, starting at the 5th observation up to the 9th might not be the optimal choice, instead we should try a different starting point and ending point in the hope that the accuracy of the model will be better (that is: the errors will be generally lower). The third important point of configuration is the number of training and test days, which again is algorithmically computed by varying the number of test and train days to achieve the smallest errors. 
 
 An example piece of code that varies the configuration of the dummies can be seen in listing \ref{codedummiesconfiguration}.
 
@@ -1662,7 +1662,7 @@ for(startDummy in 4:8)
 \label{codedummiesconfiguration}
 \end{listing}
 
-The lower and upper limits for the \texttt{startDummy} and \texttt{lenDummy} variables were chosen to match the time the values started to increase (and respectively to decrease) in the seasonal and seasonal sub-series plots (see \ref{dlastweek2hrsph3seasonal} and \ref{dlastweek2hrsph3subseries}) with allowance for some variability.
+The lower and upper limits for the \texttt{startDummy} and \texttt{lenDummy} variables were chosen to match the time the values started to increase (and respectively to decrease) in the seasonal and seasonal sub-series plots (see figures \ref{dlastweek2hrsph3seasonal} and \ref{dlastweek2hrsph3subseries}) with allowance for some variability.
 
 With this information in mind, one the best performing model (for the entire \texttt{Ph3} data, with two hour sampling frequency) I have found is: $ ARIMA(1, 0, 0) $ with 10:00 to 12:00 dummies (one dummy at the 5th observation) and two Fourier terms ($ K = 2 $). The number of training days was kept at 7 and the forecast days at 3. The full time series are forecast by fitting the found model on chunks of (in this particular case) 7 days and predicting the energy consumption or production (consumption in this case) for the next three days. The accuracy for the full time-series is computed by averaging the accuracy for each chunk of forecasts. Please keep in mind that these figures are particular to the \texttt{Ph3} time series, with two hour sampling frequency, a summary of the best performing models and their parameters on all sampling frequencies and time series will be given in section \ref{resultssection}.
 
@@ -1673,7 +1673,7 @@ The accuracy for the model presented earlier is shown in table \ref{accuracyoffu
         \hline
         & \textbf{ME} & \textbf{RMSE} & \textbf{MAE}\\
         \hline
-        \texttt{2hrs Ph3} & 7.063614 &	318.2331 &	179.0269 \\
+        \textbf{2hrs Ph3} & 7.063614 &	318.2331 &	179.0269 \\
         \hline
     \end{tabular}
     \centering
@@ -1681,6 +1681,7 @@ The accuracy for the model presented earlier is shown in table \ref{accuracyoffu
     \label{accuracyoffull2hrsph3}
 \end{table}
     
+From the table \ref{accuracyoffull2hrsph3} one can observe that all the errors are significantly lower than for any individual model tried on a smaller piece of data. So the chosen model, a compound one is a really good choice.
     
 \begin{figure}[h]
     \centering
